--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,16 @@
     </section>
     <!-- Projects -->
     <section>
+        <h2>My work!</h2>
         <div class="myProjects">
-            <h2>My work!</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum officia voluptates blanditiis nisi odio? Enim, illum. Nobis modi quidem eius harum assumenda, quas quae. Illum, dolorem consequuntur obcaecati esse perspiciatis corporis aut ducimus repudiandae numquam voluptates ad doloremque itaque quidem vitae facilis! Modi officiis ipsa illum vero soluta quia, harum impedit reprehenderit esse, corrupti eveniet aperiam debitis quam mollitia quasi, laudantium hic distinctio quo commodi laborum doloribus magnam? Quasi ipsam fuga aut quod eligendi qui?</p>
+            <div class="div">Omdb Api</div>
+            <div class="div">Weather App</div>
+            <div class="div">Calculator</div>
+            <div class="div">RPS</div>
+            <div class="div">tbd</div>
+            <div class="div">tbd</div>
+            <div class="div">tbd</div>
+            <div class="div">tbd</div>
         </div>
     </section>
     
